# Claude_terminal_ai

./: .env.example  .gitignore  CHANGELOG.md  DEVLOG_EN.md  DEVLOG_RU.md  PRD.md  README.md  STEP_1_data_foundation.md  UI_DESIGN_SPEC.md  main.py  pyproject.toml  requirements.txt  run.bat
.roo/: DEV_LOG.md
analytics/: correlation.py  mtf_confluence.py  smartmoney.py  ta_engine.py  volume_engine.py
backtester/: demo_mode.py  engine.py  metrics.py  optimizer.py
core/: base_module.py  config.py  event_bus.py  health_monitor.py  logger.py  telegram_notifier.py
data/: backfill.py  basis_calculator.py  bingx_futures_ws.py  bingx_rest.py  bingx_ws.py  data_verifier.py  ob_processor.py  rate_limit_guard.py  tf_aggregator.py  validator.py  vps_client.py  watchdog.py
deploy/: crypto-telemetry.service  crypto-validator.service  crypto-validator.timer  crypto-watchdog.service
execution/: bingx_private.py  execution_engine.py  risk_guard.py
plans/: ADR-001-vps-collector-architecture.md  bingx-api-depth-research.md  bingx-api-docs.md  bingx-data-classification.md  db-tables-reference.md  fix-pulse-connections-sync.md  full-execution-plan.md  migration-plan-vps-collector.md  post-rebuild-next-steps.md  roadmap-next-steps.md  telegram-notifications-v2-plan.md  vps-collector-rebuild-plan.md  vps-db-summary-plan.md  vps-settings-ui-plan.md  vps-ssh-guide.md  vps-tools-panel-plan.md
scripts/: aggregate_timeframes.py  backfill_futures_deep.py  check_db_stats.py  check_tables.py  clean_backfill.py  init_db.py  recover_tables.py  repair_db.py  repair_db_dump.py  sync_history.py  (+8 more)
(+76 files in other folders)
